# AILlama

./: .gitignore  GUI_USAGE_GUIDE.md  test_gui.py  test_pyollama.py
AIllama/: README.md  pyproject.toml
AIllama/src/AIllama/: __init__.py  cli.py  config.py  core.py  inference_engine.py  model_manager.py  types.py
AIllama/src/AIllama.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
AIllama/src/pyollama/: config.py  model_manager.py
pyollama/: pyproject.toml
pyollama/src/pyollama/: __init__.py  core.py  inference_engine.py
vscode-ollama-extension/: README.md  package-lock.json  package.json
vscode-ollama-extension/src/: extension.ts
